--- a/.github/workflows/pr-build-and-e2e-tests.yml
+++ b/.github/workflows/pr-build-and-e2e-tests.yml
@@ -84,6 +84,7 @@ jobs:
         name: Runs E2E tests.
         runs-on: ubuntu-latest
         needs: e2e-tests-run
+        if: ${{ always() }}
         steps:
             - run: echo Done!
 
