--- a/.github/workflows/pr-build-and-e2e-tests.yml
+++ b/.github/workflows/pr-build-and-e2e-tests.yml
@@ -86,7 +86,13 @@ jobs:
         needs: e2e-tests-run
         if: ${{ always() }}
         steps:
-            - run: echo Done!
+            - run: |
+                result="${{ needs.e2e-tests-run.result }}"
+                if [[ $result != "success" && $result != "skipped" ]]; then
+                  echo "One or more e2e tests have failed!"
+                exit 1
+                fi
+                echo "e2e tests have completed successfully."
 
     merge-reports:
         name: Merge e2e test reports
