--- a/.github/workflows/non-cot-pr-build-and-e2e-tests.yml
+++ b/.github/workflows/non-cot-pr-build-and-e2e-tests.yml
@@ -1,7 +1,10 @@
 name: Run tests against PR in an environment with HPOS disabled
 on:
-    pull_request:
-    workflow_dispatch:
+  pull_request:
+    paths-ignore:
+      - '**/changelog/**'
+      - '**.md'
+  workflow_dispatch:
 
 concurrency:
     group: ${{ github.workflow }}-${{ github.ref }}
