--- a/.github/workflows/non-cot-pr-build-and-e2e-tests.yml
+++ b/.github/workflows/non-cot-pr-build-and-e2e-tests.yml
@@ -67,7 +67,7 @@ jobs:
                   compression-level: 9
 
     e2e-tests-success:
-        name: Evaluate e2e results
+        name: Evaluate e2e tests results
         runs-on: ubuntu-latest
         needs: non-hpos-e2e-tests-run
         if: ${{ always() }}
