--- a/.github/workflows/pr-build-and-e2e-tests.yml
+++ b/.github/workflows/pr-build-and-e2e-tests.yml
@@ -81,7 +81,7 @@ jobs:
                   compression-level: 9
 
     e2e-tests-success:
-        name: Evaluate e2e results
+        name: Evaluate e2e tests results
         runs-on: ubuntu-latest
         needs: e2e-tests-run
         if: ${{ always() }}
