Add paths-ignore for performance tests

--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -2,6 +2,9 @@ name: Metrics Tracking
 
 on:
     pull_request:
+      paths-ignore:
+        - '**/changelog/**'
+        - '**.md'
     push:
         branches: [trunk]
 
