--- a/.github/workflows/smoke-test-pr-merge.yml
+++ b/.github/workflows/smoke-test-pr-merge.yml
@@ -3,6 +3,9 @@ on:
     pull_request:
         types:
             - closed
+        paths-ignore:
+            - '**/changelog/**'
+            - '**.md'
 concurrency:
     group: ${{ github.workflow }}-${{ github.event.pull_request.number }}
     cancel-in-progress: true
