--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -4,6 +4,7 @@ on:
     pull_request:
       paths-ignore:
         - '**/changelog/**'
+        - 'docs/**'
         - '**.md'
     push:
         branches: [trunk]
