--- a/.github/workflows/smoke-test-pr-merge.yml
+++ b/.github/workflows/smoke-test-pr-merge.yml
@@ -5,6 +5,7 @@ on:
             - closed
         paths-ignore:
             - '**/changelog/**'
+            - 'docs/**'
             - '**.md'
 concurrency:
     group: ${{ github.workflow }}-${{ github.event.pull_request.number }}
