--- a/docs/docs-manifest.json
+++ b/docs/docs-manifest.json
@@ -1192,7 +1192,7 @@
           }
         },
         {
-          "post_title": "WooCommerce CLI Frequently Asked Questions",
+          "post_title": "WooCommerce CLI Frequently Asked Questions - ",
           "menu_title": "Frequently Asked Questions",
           "tags": "reference",
           "edit_url": "https://github.com/woocommerce/woocommerce/edit/trunk/docs/wc-cli/cli-faq.md",
