Update the list of paths to ignore

--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -3,9 +3,15 @@ name: Metrics Tracking
 on:
     pull_request:
       paths-ignore:
-        - '**/changelog/**'
-        - 'docs/**'
         - '**.md'
+        - '**/changelog/**'
+        - '**/.wireit'
+        - 'docs/**'
+        - 'plugins/woo-ai'
+        - 'plugins/woocommerce/.wordpress-org'
+        - 'plugins/woocommerce/i18n'
+        - 'plugins/woocommerce-beta-tester'
+        - 'tools'
     push:
         branches: [trunk]
 
