Update the list of paths to ignore

--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -5,13 +5,14 @@ on:
       paths-ignore:
         - '**.md'
         - '**/changelog/**'
-        - '**/.wireit'
+        - '**/.wireit/**'
         - 'docs/**'
-        - 'plugins/woo-ai'
-        - 'plugins/woocommerce/.wordpress-org'
-        - 'plugins/woocommerce/i18n'
-        - 'plugins/woocommerce-beta-tester'
-        - 'tools'
+        - 'plugins/woo-ai/**'
+        - 'plugins/woocommerce/.wordpress-org/**'
+        - 'plugins/woocommerce/i18n/**'
+        - 'plugins/woocommerce/tests/**'
+        - 'plugins/woocommerce-beta-tester/**'
+        - 'tools/**'
     push:
         branches: [trunk]
 
