--- a/.github/workflows/smoke-test-pr-merge.yml
+++ b/.github/workflows/smoke-test-pr-merge.yml
@@ -6,13 +6,13 @@ on:
         paths-ignore:
             - '**.md'
             - '**/changelog/**'
-            - '**/.wireit'
+            - '**/.wireit/**'
             - 'docs/**'
-            - 'plugins/woo-ai'
-            - 'plugins/woocommerce/.wordpress-org'
-            - 'plugins/woocommerce/i18n'
-            - 'plugins/woocommerce-beta-tester'
-            - 'tools'
+            - 'plugins/woo-ai/**'
+            - 'plugins/woocommerce/.wordpress-org/**'
+            - 'plugins/woocommerce/i18n/**'
+            - 'plugins/woocommerce-beta-tester/**'
+            - 'tools/**'
 concurrency:
     group: ${{ github.workflow }}-${{ github.event.pull_request.number }}
     cancel-in-progress: true
