--- a/.github/workflows/non-cot-pr-build-and-e2e-tests.yml
+++ b/.github/workflows/non-cot-pr-build-and-e2e-tests.yml
@@ -4,13 +4,13 @@ on:
     paths-ignore:
         - '**.md'
         - '**/changelog/**'
-        - '**/.wireit'
+        - '**/.wireit/**'
         - 'docs/**'
-        - 'plugins/woo-ai'
-        - 'plugins/woocommerce/.wordpress-org'
-        - 'plugins/woocommerce/i18n'
-        - 'plugins/woocommerce-beta-tester'
-        - 'tools'
+        - 'plugins/woo-ai/**'
+        - 'plugins/woocommerce/.wordpress-org/**'
+        - 'plugins/woocommerce/i18n/**'
+        - 'plugins/woocommerce-beta-tester/**'
+        - 'tools/**'
   workflow_dispatch:
 
 concurrency:
