--- a/.github/workflows/pr-build-and-e2e-tests.yml
+++ b/.github/workflows/pr-build-and-e2e-tests.yml
@@ -5,13 +5,13 @@ on:
         paths-ignore:
             - '**.md'
             - '**/changelog/**'
-            - '**/.wireit'
+            - '**/.wireit/**'
             - 'docs/**'
-            - 'plugins/woo-ai'
-            - 'plugins/woocommerce/.wordpress-org'
-            - 'plugins/woocommerce/i18n'
-            - 'plugins/woocommerce-beta-tester'
-            - 'tools'
+            - 'plugins/woo-ai/**'
+            - 'plugins/woocommerce/.wordpress-org/**'
+            - 'plugins/woocommerce/i18n/**'
+            - 'plugins/woocommerce-beta-tester/**'
+            - 'tools/**'
 
 concurrency:
     group: ${{ github.workflow }}-${{ github.ref }}
