Skip e2e tests for not relevant changes (e.g. docs) (#44316)
* Skip workflows when only .md files are updated

* Add paths-ignore for performance tests

* Add paths-ignore in the pr merge workflow

* Include docs/** in the ignore paths

* Update the list of paths to ignore

* Update the list of paths to ignore

--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -2,6 +2,17 @@ name: Metrics Tracking
 
 on:
     pull_request:
+      paths-ignore:
+        - '**.md'
+        - '**/changelog/**'
+        - '**/.wireit/**'
+        - 'docs/**'
+        - 'plugins/woo-ai/**'
+        - 'plugins/woocommerce/.wordpress-org/**'
+        - 'plugins/woocommerce/i18n/**'
+        - 'plugins/woocommerce/tests/**'
+        - 'plugins/woocommerce-beta-tester/**'
+        - 'tools/**'
     push:
         branches: [trunk]
 
