--- a/.github/workflows/pr-build-and-e2e-tests.yml
+++ b/.github/workflows/pr-build-and-e2e-tests.yml
@@ -3,7 +3,15 @@ on:
     workflow_dispatch:
     pull_request:
         paths-ignore:
+            - '**.md'
             - '**/changelog/**'
+            - '**/.wireit/**'
+            - 'docs/**'
+            - 'plugins/woo-ai/**'
+            - 'plugins/woocommerce/.wordpress-org/**'
+            - 'plugins/woocommerce/i18n/**'
+            - 'plugins/woocommerce-beta-tester/**'
+            - 'tools/**'
 
 concurrency:
     group: ${{ github.workflow }}-${{ github.ref }}
