--- a/.github/workflows/non-cot-pr-build-and-e2e-tests.yml
+++ b/.github/workflows/non-cot-pr-build-and-e2e-tests.yml
@@ -1,7 +1,17 @@
 name: Run tests against PR in an environment with HPOS disabled
 on:
-    pull_request:
-    workflow_dispatch:
+  pull_request:
+    paths-ignore:
+        - '**.md'
+        - '**/changelog/**'
+        - '**/.wireit/**'
+        - 'docs/**'
+        - 'plugins/woo-ai/**'
+        - 'plugins/woocommerce/.wordpress-org/**'
+        - 'plugins/woocommerce/i18n/**'
+        - 'plugins/woocommerce-beta-tester/**'
+        - 'tools/**'
+  workflow_dispatch:
 
 concurrency:
     group: ${{ github.workflow }}-${{ github.ref }}
