--- a/.github/workflows/smoke-test-pr-merge.yml
+++ b/.github/workflows/smoke-test-pr-merge.yml
@@ -3,6 +3,16 @@ on:
     pull_request:
         types:
             - closed
+        paths-ignore:
+            - '**.md'
+            - '**/changelog/**'
+            - '**/.wireit/**'
+            - 'docs/**'
+            - 'plugins/woo-ai/**'
+            - 'plugins/woocommerce/.wordpress-org/**'
+            - 'plugins/woocommerce/i18n/**'
+            - 'plugins/woocommerce-beta-tester/**'
+            - 'tools/**'
 concurrency:
     group: ${{ github.workflow }}-${{ github.event.pull_request.number }}
     cancel-in-progress: true
