--- a/plugins/woocommerce-blocks/package.json
+++ b/plugins/woocommerce-blocks/package.json
@@ -187,7 +187,7 @@
 		"@wordpress/dom": "3.27.0",
 		"@wordpress/dom-ready": "3.27.0",
 		"@wordpress/e2e-test-utils": "10.12.0",
-		"@wordpress/e2e-test-utils-playwright": "wp-6.4",
+		"@wordpress/e2e-test-utils-playwright": "0.19.0",
 		"@wordpress/e2e-tests": "^4.9.2",
 		"@wordpress/element": "5.22.0",
 		"@wordpress/env": "8.2.0",
