--- a/.github/workflows/non-hpos-build-and-e2e-tests-daily.yml
+++ b/.github/workflows/non-hpos-build-and-e2e-tests-daily.yml
@@ -1,4 +1,4 @@
-name: Run daily tests in an environment with HPOS enabled
+name: Run daily tests in an environment with HPOS disabled
 on:
     schedule:
         - cron: '30 2 * * *'
@@ -15,7 +15,7 @@ jobs:
         name: Runs E2E tests with HPOS enabled.
         runs-on: ubuntu-20.04
         permissions:
-          contents: read
+            contents: read
         env:
             ALLURE_RESULTS_DIR: ${{ github.workspace }}/plugins/woocommerce/tests/e2e-pw/allure-results
             ALLURE_REPORT_DIR: ${{ github.workspace }}/plugins/woocommerce/tests/e2e-pw/allure-report
@@ -25,13 +25,13 @@ jobs:
             - name: Setup WooCommerce Monorepo
               uses: ./.github/actions/setup-woocommerce-monorepo
               with:
-                install: '@woocommerce/plugin-woocommerce...'
-                build: '@woocommerce/plugin-woocommerce'
+                  install: '@woocommerce/plugin-woocommerce...'
+                  build: '@woocommerce/plugin-woocommerce'
 
             - name: Load docker images and start containers with HPOS enabled.
               working-directory: plugins/woocommerce
               env:
-                ENABLE_HPOS: 1
+                  ENABLE_HPOS: 0
               run: pnpm --filter=@woocommerce/plugin-woocommerce env:test:cot
 
             - name: Download and install Chromium browser.
@@ -74,7 +74,7 @@ jobs:
         name: Runs API tests with HPOS enabled.
         runs-on: ubuntu-20.04
         permissions:
-          contents: read
+            contents: read
         env:
             ALLURE_RESULTS_DIR: ${{ github.workspace }}/plugins/woocommerce/tests/api-core-tests/api-test-report/allure-results
             ALLURE_REPORT_DIR: ${{ github.workspace }}/plugins/woocommerce/tests/api-core-tests/api-test-report/allure-report
@@ -84,13 +84,13 @@ jobs:
             - name: Setup WooCommerce Monorepo
               uses: ./.github/actions/setup-woocommerce-monorepo
               with:
-                install: '@woocommerce/plugin-woocommerce...'
-                build: '@woocommerce/plugin-woocommerce'
+                  install: '@woocommerce/plugin-woocommerce...'
+                  build: '@woocommerce/plugin-woocommerce'
 
             - name: Load docker images and start containers with HPOS enabled.
               working-directory: plugins/woocommerce
               env:
-                ENABLE_HPOS: 1
+                  ENABLE_HPOS: 0
               run: pnpm --filter=@woocommerce/plugin-woocommerce env:test:cot
 
             - name: Run Playwright API tests.
@@ -137,7 +137,7 @@ jobs:
             )
         runs-on: ubuntu-20.04
         permissions:
-          contents: read
+            contents: read
         needs: [hpos-api-tests-run, hpos-e2e-tests-run]
         steps:
             - name: Create dirs
@@ -175,31 +175,3 @@ jobs:
                   script: |
                       const script = require( './repo/.github/workflows/scripts/prepare-test-summary-daily.js' )
                       return await script( { core } )
-
-    publish-test-reports:
-        name: Publish test reports
-        if: |
-            always() && 
-            ! github.event.pull_request.head.repo.fork &&
-            (
-              contains( needs.*.result, 'success' ) ||
-              contains( needs.*.result, 'failure' )
-            )
-        runs-on: ubuntu-20.04
-        needs: [hpos-api-tests-run, hpos-e2e-tests-run]
-        env:
-            GITHUB_TOKEN: ${{ secrets.REPORTS_TOKEN }}
-            RUN_ID: ${{ github.run_id }}
-            COMMIT_SHA: ${{ github.event.pull_request.head.sha }}
-        steps:
-            - name: Publish test reports
-              env:
-                  API_ARTIFACT: api-test-report---pr-${{ github.run_number }}
-                  E2E_ARTIFACT: e2e-test-report---pr-${{ github.run_number }}
-              run: |
-                  gh workflow run publish-test-reports-daily.yml \
-                    -f run_id=$RUN_ID \
-                    -f api_artifact=$API_ARTIFACT \
-                    -f e2e_artifact=$E2E_ARTIFACT \
-                    -f s3_root=public \
-                    --repo woocommerce/woocommerce-test-reports
