Add sharding to Blocks e2e tests (#44440)
* Add sharding to Blocks e2e tests

* Changelog

* Push a change to Blocks README to trigger tests

* Fix syntax

* Fixed again

* Try again

* Trying to get the shard number

* Shard names

* fix E2E test

* complete all the jobs

---------

Co-authored-by: Jon Lane <jon.lane@automattic.com>
Co-authored-by: Luigi Teschio <gigitux@gmail.com>

--- a/.github/workflows/blocks-playwright.yml
+++ b/.github/workflows/blocks-playwright.yml
@@ -19,30 +19,27 @@ jobs:
             run:
                 working-directory: plugins/woocommerce-blocks
         strategy:
+            fail-fast: false
             matrix:
                 config:
-                    [
-                        {
-                            name: Normal,
-                            file: playwright.config.ts,
-                            resultPath: test-results,
-                        },
-                        {
-                            name: Classic,
-                            file: playwright.classic-theme.config.ts,
-                            resultPath: test-results-classic-theme,
-                        },
-                        {
-                            name: SideEffects,
-                            file: playwright.side-effects.config.ts,
-                            resultPath: test-results-side-effects,
-                        },
-                        {
-                            name: BlockThemeWithTemplates,
-                            file: playwright.block-theme-with-templates.config.ts,
-                            resultPath: test-results-block-theme-with-templates,
-                        },
-                    ]
+                    - name: Normal
+                      file: playwright.config.ts
+                      resultPath: test-results
+                    - name: Classic
+                      file: playwright.classic-theme.config.ts
+                      resultPath: test-results-classic-theme
+                    - name: SideEffects
+                      file: playwright.side-effects.config.ts
+                      resultPath: test-results-side-effects
+                    - name: BlockThemeWithTemplates
+                      file: playwright.block-theme-with-templates.config.ts
+                      resultPath: test-results-block-theme-with-templates
+                shards:
+                    - name: 1/5
+                    - name: 2/5
+                    - name: 3/5
+                    - name: 4/5
+                    - name: 5/5
         steps:
             - uses: actions/checkout@v3
 
@@ -60,11 +57,10 @@ jobs:
 
             - name: Run Playwright tests
               working-directory: plugins/woocommerce-blocks
-              run: pnpm playwright test --config=tests/e2e/${{ matrix.config.file }}
+              run: pnpm playwright test --config=tests/e2e/${{ matrix.config.file }} --shard ${{ matrix.shards.name }}
 
             - uses: actions/upload-artifact@v3
               if: ${{ failure() }}
-
               with:
                   name: playwright-report-${{ matrix.config.name }}
                   path: plugins/woocommerce-blocks/tests/e2e/artifacts/${{ matrix.config.resultPath }}
