--- a/plugins/woocommerce/composer.json
+++ b/plugins/woocommerce/composer.json
@@ -35,8 +35,9 @@
 		"mockery/mockery": "1.6.6",
 		"phpunit/phpunit": "^9.6",
 		"sebastian/comparator": "^4.0",
-		"yoast/phpunit-polyfills": "^2.0",
-		"woocommerce/monorepo-plugin": "*"
+		"spatie/phpunit-watcher": "^1.23",
+		"woocommerce/monorepo-plugin": "*",
+		"yoast/phpunit-polyfills": "^2.0"
 	},
 	"config": {
 		"optimize-autoloader": true,
