--- a/plugins/woocommerce/package.json
+++ b/plugins/woocommerce/package.json
@@ -21,12 +21,13 @@
 		"e2e": "pnpm exec wc-e2e test:e2e",
 		"e2e:debug": "pnpm exec wc-e2e test:e2e-debug",
 		"e2e:dev": "pnpm exec wc-e2e test:e2e-dev",
+		"env:force-mariadb": "sed -i '' \"s|image: 'mariadb'|image: 'mariadb:11.2'|g\" node_modules/@wordpress/env/lib/build-docker-compose-config.js",
 		"env:destroy": "pnpm wp-env destroy",
 		"env:dev": "pnpm wp-env start --update",
 		"env:down": "pnpm wp-env stop",
 		"env:performance-init": "./tests/performance/bin/init-sample-products.sh",
-		"env:restart": "pnpm wp-env destroy && pnpm wp-env start --update",
-		"env:start": "pnpm wp-env start",
+		"env:restart": "pnpm env:force-mariadb && pnpm wp-env destroy && pnpm wp-env start --update",
+		"env:start": "pnpm env:force-mariadb && pnpm wp-env start",
 		"env:stop": "pnpm wp-env stop",
 		"env:test": "WP_ENV_LIFECYCLE_SCRIPT_AFTER_START='./tests/e2e-pw/bin/test-env-setup.sh' && pnpm env:dev",
 		"env:test:cot": "WP_ENV_LIFECYCLE_SCRIPT_AFTER_START='ENABLE_HPOS=1 ./tests/e2e-pw/bin/test-env-setup.sh' && ENABLE_HPOS=1 pnpm env:dev",
