Replace tag postinstall

--- a/plugins/woocommerce/package.json
+++ b/plugins/woocommerce/package.json
@@ -26,13 +26,13 @@
 		"env:dev": "pnpm wp-env start --update",
 		"env:down": "pnpm wp-env stop",
 		"env:performance-init": "./tests/performance/bin/init-sample-products.sh",
-		"env:restart": "pnpm env:force-mariadb && pnpm wp-env destroy && pnpm wp-env start --update",
-		"env:start": "pnpm env:force-mariadb && pnpm wp-env start",
+		"env:restart": "pnpm wp-env destroy && pnpm wp-env start --update",
+		"env:start": "pnpm wp-env start",
 		"env:stop": "pnpm wp-env stop",
 		"env:test": "WP_ENV_LIFECYCLE_SCRIPT_AFTER_START='./tests/e2e-pw/bin/test-env-setup.sh' && pnpm env:dev",
 		"env:test:cot": "WP_ENV_LIFECYCLE_SCRIPT_AFTER_START='ENABLE_HPOS=1 ./tests/e2e-pw/bin/test-env-setup.sh' && ENABLE_HPOS=1 pnpm env:dev",
 		"preinstall": "npx only-allow pnpm",
-		"postinstall": "composer install",
+		"postinstall": "composer install && pnpm env:force-mariadb",
 		"lint": "pnpm --if-present '/^lint:lang:.*$/'",
 		"lint:fix": "pnpm --if-present '/^lint:fix:lang:.*$/'",
 		"lint:fix:lang:php": "composer run-script phpcbf",
