--- a/.github/workflows/release-code-freeze.yml
+++ b/.github/workflows/release-code-freeze.yml
@@ -1,7 +1,7 @@
 name: 'Release: Code freeze'
 on:
     schedule:
-        - cron: '0 0 * * 4' # Run at start of day UTC on Thursdays. i.e. ~Wednesdays EOD 23:59:59 UTC
+        - cron: '0 0 * * 5' # Run at start of day UTC on Friday. i.e. ~Thursday EOD 23:59:59 UTC - this is a temporary update for 8.7
     workflow_dispatch:
         inputs:
             timeOverride:
