--- a/plugins/woocommerce-blocks/package.json
+++ b/plugins/woocommerce-blocks/package.json
@@ -313,7 +313,10 @@
 		"postcode-validator": "3.8.15",
 		"preact": "^10.19.3",
 		"prop-types": "^15.8.1",
+		"react-country-flag": "^3.1.0",
+		"react-input-mask": "^2.0.4",
 		"react-number-format": "4.9.3",
+		"react-select-search": "^4.1.7",
 		"react-transition-group": "^4.4.5",
 		"reakit": "1.3.11",
 		"request": "2.88.2",
