--- a/plugins/woocommerce-blocks/package.json
+++ b/plugins/woocommerce-blocks/package.json
@@ -5,11 +5,7 @@
 	"version": "11.8.0-dev",
 	"description": "WooCommerce blocks for the Gutenberg editor.",
 	"homepage": "https://github.com/woocommerce/woocommerce-gutenberg-products-block/",
-	"keywords": [
-		"woocommerce",
-		"wordpress",
-		"blocks"
-	],
+	"keywords": [ "woocommerce", "wordpress", "blocks" ],
 	"sideEffects": [
 		"*.css",
 		"*.scss",
@@ -76,7 +72,7 @@
 		"reformat-files": "prettier --ignore-path .eslintignore --write \"**/*.{js,jsx,json,ts,tsx}\"",
 		"release": "sh ./bin/wordpress-deploy.sh",
 		"rimraf": "./node_modules/rimraf/bin.js",
-		"start": "rimraf build/* && cross-env BABEL_ENV=default CHECK_CIRCULAR_DEPS=true webpack --watch",
+		"start": "rimraf build/* && cross-env BABEL_ENV=development NODE_ENV=development CHECK_CIRCULAR_DEPS=false webpack --watch",
 		"storybook": "storybook dev  -c ./storybook -p 6006 --ci",
 		"storybook:build": "BABEL_ENV=development storybook build  -c ./storybook -o ./storybook/dist",
 		"storybook:deploy": "rimraf ./storybook/dist/* && pnpm run storybook:build && gh-pages -d ./storybook/dist",
@@ -125,6 +121,7 @@
 		"@octokit/action": "5.0.2",
 		"@octokit/graphql": "5.0.5",
 		"@playwright/test": "1.38.1",
+		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
 		"@storybook/addon-a11y": "7.5.2",
 		"@storybook/addon-actions": "^7.6.4",
 		"@storybook/addon-docs": "^7.6.4",
@@ -256,6 +253,7 @@
 		"puppeteer": "17.1.3",
 		"react-docgen": "5.4.3",
 		"react-docgen-typescript-plugin": "^1.0.5",
+		"react-refresh": "^0.14.0",
 		"react-test-renderer": "17.0.2",
 		"redux": "4.2.1",
 		"request-promise": "4.2.6",
@@ -266,6 +264,7 @@
 		"storybook-addon-react-docgen": "1.2.44",
 		"stylelint": "^14.16.1",
 		"terser-webpack-plugin": "5.3.6",
+		"type-fest": "^4.10.3",
 		"typescript": "5.3.2",
 		"utility-types": "3.10.0",
 		"webpack": "5.88.2",
@@ -331,20 +330,10 @@
 		"ndb": "1.1.5"
 	},
 	"lint-staged": {
-		"*.scss": [
-			"pnpm run lint:css"
-		],
-		"*.{js,ts,tsx}": [
-			"prettier --write",
-			"pnpm run lint:js"
-		],
-		"*.php": [
-			"php -d display_errors=1 -l",
-			"composer run-script phpcs"
-		],
-		"*.md": [
-			"pnpm run lint:md:docs"
-		]
+		"*.scss": [ "pnpm run lint:css" ],
+		"*.{js,ts,tsx}": [ "prettier --write", "pnpm run lint:js" ],
+		"*.php": [ "php -d display_errors=1 -l", "composer run-script phpcs" ],
+		"*.md": [ "pnpm run lint:md:docs" ]
 	},
 	"changelog": {
 		"labelPrefix": "type:",
@@ -352,10 +341,7 @@
 		"defaultPrefix": "dev",
 		"repo": "woocommerce/woocommerce-gutenberg-products-block"
 	},
-	"files": [
-		"build",
-		"blocks.ini"
-	],
+	"files": [ "build", "blocks.ini" ],
 	"config": {
 		"ci": {
 			"lint": {
@@ -409,17 +395,25 @@
 				"assets",
 				"packages"
 			],
-			"output": [
-				"build",
-				"blocks.ini"
-			],
-			"dependencies": [
-				"dependencyOutputs"
-			]
+			"output": [ "build", "blocks.ini" ],
+			"dependencies": [ "dependencyOutputs" ]
 		},
 		"watch:build:project:bundle": {
 			"command": "webpack --watch",
-			"service": true
+			"service": true,
+			"env": {
+				"NODE_ENV": {
+					"external": true,
+					"default": "development"
+				},
+				"BABEL_ENV": {
+					"external": true,
+					"default": "development"
+				},
+				"WOOCOMMERCE_BLOCKS_PHASE": {
+					"external": true
+				}
+			}
 		},
 		"dependencyOutputs": {
 			"allowUsuallyExcludedPaths": true,
