--- a/plugins/woocommerce-blocks/package.json
+++ b/plugins/woocommerce-blocks/package.json
@@ -107,8 +107,7 @@
 		"wp-env:config": "./bin/wp-env-pre-config.sh",
 		"watch:build": "pnpm --if-present --workspace-concurrency=Infinity --filter=\"$npm_package_name...\" --parallel '/^watch:build:project:.*$/'",
 		"watch:build:project": "pnpm --if-present run '/^watch:build:project:.*$/'",
-		"watch:build:project:bundle": "wireit",
-		"postinstall": "sed -i \"s|image: 'mariadb'|image: 'mariadb:11.2'|g\" node_modules/@wordpress/env/lib/build-docker-compose-config.js"
+		"watch:build:project:bundle": "wireit"
 	},
 	"devDependencies": {
 		"@actions/core": "1.10.0",
@@ -287,6 +286,7 @@
 		"@dnd-kit/utilities": "^3.2.2",
 		"@emotion/styled": "^11.11.0",
 		"@preact/signals": "^1.2.2",
+		"@woocommerce/explat": "workspace:^",
 		"@woocommerce/tracks": "workspace:^",
 		"@wordpress/autop": "3.16.0",
 		"@wordpress/compose": "5.5.0",
