--- a/plugins/woocommerce-blocks/package.json
+++ b/plugins/woocommerce-blocks/package.json
@@ -310,6 +310,7 @@
 		"fast-deep-equal": "^3.1.3",
 		"fast-sort": "^3.4.0",
 		"html-react-parser": "3.0.4",
+		"intl-tel-input": "^19.3.0",
 		"libphonenumber-js": "^1.10.56",
 		"postcode-validator": "3.8.15",
 		"preact": "^10.19.3",
