--- a/plugins/woocommerce-blocks/tsconfig.json
+++ b/plugins/woocommerce-blocks/tsconfig.json
@@ -9,7 +9,7 @@
 		"./assets/js/atomic/blocks/**/block.json",
 		"./assets/js/blocks/mini-cart/mini-cart-contents/inner-blocks/**/block.json",
 		"./storybook/**/*",
-		"./tests/js/setup-after-env.ts"
+		"./tests/js/setup-after-env.ts",
 	],
 	"exclude": [
 		"./storybook/build",
