Fixed `@woocommerce/plugin-woocommerce` Watch
By default `nodemon` only watches for JS file changes. This expands the
config so that it watch the file extensions that are actually
produced by builds.

--- a/plugins/woocommerce/package.json
+++ b/plugins/woocommerce/package.json
@@ -256,6 +256,7 @@
 			"node_modules/@woocommerce/classic-assets/build",
 			"node_modules/@woocommerce/admin-library/build"
 		],
+		"ext": "js,css,php,json",
 		"ignoreRoot": []
 	},
 	"wireit": {
