--- a/plugins/woocommerce/package.json
+++ b/plugins/woocommerce/package.json
@@ -256,7 +256,7 @@
 			"node_modules/@woocommerce/classic-assets/build",
 			"node_modules/@woocommerce/admin-library/build"
 		],
-		"ext": "js,css,php,json,ini",
+		"ext": "js,css,php,json",
 		"ignoreRoot": []
 	},
 	"wireit": {
