--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
     outputs:
       lint-jobs: ${{ steps.project-jobs.outputs.lint-jobs }}
       test-jobs: ${{ steps.project-jobs.outputs.test-jobs }}
+      e2e-test-jobs: ${{ steps.project-jobs.outputs.e2e-test-jobs }}
     steps:
       - uses: 'actions/checkout@v3'
         name: 'Checkout'
@@ -88,6 +89,45 @@ jobs:
         run: 'pnpm --filter="${{ matrix.projectName }}" ${{ matrix.testEnv.start }}'
       - name: 'Test'
         run: 'pnpm --filter="${{ matrix.projectName }}" ${{ matrix.command }}'
+        
+  project-e2e-test-jobs:
+      name: '${{ matrix.name }}'
+      runs-on: 'ubuntu-20.04'
+      needs: 'project-jobs'
+      if: ${{ needs.project-jobs.outputs.e2e-test-jobs != '[]' }}
+      strategy:
+        fail-fast: false
+        matrix:
+          include: ${{ fromJSON( needs.project-jobs.outputs.e2e-test-jobs ) }}
+      steps:
+        - uses: 'actions/checkout@v3'
+          name: 'Checkout'
+          
+        - uses: './.github/actions/setup-woocommerce-monorepo'
+          name: 'Setup Monorepo'
+          id: 'setup-monorepo'
+          with:
+            install: '${{ matrix.projectName }}...'
+            build: '${{ matrix.projectName }}'
+            
+        - name: 'Prepare Test Environment'
+          id: 'prepare-test-environment'
+          if: ${{ matrix.testEnv.shouldCreate }}
+          env: ${{ matrix.testEnv.envVars }}
+          run: 'pnpm --filter="${{ matrix.projectName }}" ${{ matrix.testEnv.start }}'
+          
+        - name: 'Run tests'
+          run: 'pnpm --filter="${{ matrix.projectName }}" ${{ matrix.command }}'
+          
+        - name: Upload artifacts
+          if: always()
+          uses: actions/upload-artifact@v4
+          with:
+            name: all-blob-reports
+            path: tests/e2e-pw/test-results/allure-results
+            retention-days: 1
+            compression-level: 9
+            
   evaluate-project-jobs:
     # In order to add a required status check we need a consistent job that we can grab onto.
     # Since we are dynamically generating a matrix for the project jobs, however, we can't
