--- a/plugins/woocommerce/package.json
+++ b/plugins/woocommerce/package.json
@@ -28,7 +28,7 @@
 		"env:restart": "pnpm wp-env destroy && pnpm wp-env start --update",
 		"env:start": "pnpm wp-env start",
 		"env:stop": "pnpm wp-env stop",
-		"env:test": "WP_ENV_LIFECYCLE_SCRIPT_AFTER_START='./tests/e2e-pw/bin/test-env-setup.sh' && pnpm env:dev",
+		"env:test": "WP_ENV_LIFECYCLE_SCRIPT_AFTER_START='./tests/e2e-pw/bin/test-env-setup.sh' && pnpm env:dev && pnpm playwright install chromium",
 		"env:test:cot": "WP_ENV_LIFECYCLE_SCRIPT_AFTER_START='ENABLE_HPOS=1 ./tests/e2e-pw/bin/test-env-setup.sh' && ENABLE_HPOS=1 pnpm env:dev",
 		"preinstall": "npx only-allow pnpm",
 		"postinstall": "composer install",
@@ -162,11 +162,10 @@
 							"wpVersion": "latest-2"
 						}
 					}
-				}
-			],
-			"e2e_tests": [
+				},
 				{
 					"name": "Core e2e sample suite",
+					"testType": "e2e",
 					"command": "test:e2e-sample",
 					"changes": [],
 					"testEnv": {
