Detect the project path for artifacts upload

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,18 +113,21 @@ jobs:
         - name: 'Prepare Test Environment'
           id: 'prepare-test-environment'
           if: ${{ matrix.testEnv.shouldCreate }}
-          env: ${{ matrix.testEnv.envVars }}
           run: 'pnpm --filter="${{ matrix.projectName }}" ${{ matrix.testEnv.start }}'
           
         - name: 'Run tests'
           run: 'pnpm --filter="${{ matrix.projectName }}" ${{ matrix.command }}'
+          
+        - name: 'Find project path'
+          run: |
+            echo "projectPath=\"(pnpm --filter=@woocommerce/plugin-woocommerce exec pwd)\"" >> "$GITHUB_OUTPUT"
           
         - name: Upload artifacts
           if: always()
           uses: actions/upload-artifact@v4
           with:
             name: all-blob-reports
-            path: tests/e2e-pw/test-results/allure-results
+            path: ${{ projectPath }}/tests/e2e-pw/test-results/allure-results
             retention-days: 1
             compression-level: 9
             
