Fix workflow syntax

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,14 +119,14 @@ jobs:
           run: 'pnpm --filter="${{ matrix.projectName }}" ${{ matrix.command }}'
           
         - name: 'Find project path'
-          run: 'echo projectPath="(pnpm --filter=@woocommerce/plugin-woocommerce exec pwd)" >> "$GITHUB_OUTPUT"'
+          run: echo "PROJECT_PATH="(pnpm --filter=@woocommerce/plugin-woocommerce exec pwd)" >> $GITHUB_OUTPUT
           
         - name: Upload artifacts
           if: always()
           uses: actions/upload-artifact@v4
           with:
             name: all-blob-reports
-            path: ${{ projectPath }}/tests/e2e-pw/test-results/allure-results
+            path: ${{ PROJECT_PATH }}/tests/e2e-pw/test-results/allure-results
             retention-days: 1
             compression-level: 9
             
