Include e2e jobs in evaluation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -130,7 +130,7 @@ jobs:
   evaluate-project-jobs:
     # In order to add a required status check we need a consistent job that we can grab onto.
     # Since we are dynamically generating a matrix for the project jobs, however, we can't
-    # rely on on any specific job being present. We can get around this limitation by
+    # rely on any specific job being present. We can get around this limitation by
     # using a job that runs after all the others and either passes or fails based
     # on the results of the other jobs in the workflow.
     name: 'Evaluate Project Job Statuses'
@@ -139,6 +139,7 @@ jobs:
       'project-jobs',
       'project-lint-jobs',
       'project-test-jobs'
+      'project-e2e-test-jobs'
     ]
     if: ${{ always() }}
     steps:
@@ -157,6 +158,11 @@ jobs:
           result="${{ needs.project-test-jobs.result }}"
           if [[ $result != "success" && $result != "skipped" ]]; then
             echo "One or more test jobs have failed."
+            exit 1
+          fi
+          result="${{ needs.project-e2e-test-jobs.result }}"
+          if [[ $result != "success" && $result != "skipped" ]]; then
+            echo "One or more e2e test jobs have failed."
             exit 1
           fi
           echo "All jobs have completed successfully."
