--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -187,24 +187,19 @@ jobs:
       - name: 'Download blob reports from artifacts'
         uses: actions/download-artifact@v4
         with:
-          path: ./allure-results
+          path: ./out/allure-results
           pattern: all-blob-reports-*
           run-id: project-e2e-test-jobs
           merge-multiple: true
 
       - name: 'Generate Allure report'
         id: generate_allure_report
-        run: allure generate --clean ./allure-results --output ./allure-report
+        run: allure generate --clean ./out/allure-results --output ./out/allure-report
 
       - name: 'Archive Allure report'
-        if: |
-          always() &&
-          steps.generate_e2e_report.conclusion == 'success'
         uses: actions/upload-artifact@v4
         with:
           name: e2e-test-report
-          path: |
-            ./allure-results
-            ./allure-report
+          path: ./out
           if-no-files-found: ignore
           retention-days: 5
