--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -170,8 +170,8 @@ jobs:
           fi
           echo "All jobs have completed successfully."
 
-  merge-e2e-test-reports:
-    name: 'Merge e2e test reports'
+  publish-e2e-test-reports:
+    name: 'Publish e2e test reports'
     needs: [ project-e2e-test-jobs ]
     if: ${{ always() }}
     runs-on: ubuntu-latest
@@ -196,10 +196,28 @@ jobs:
         id: generate_allure_report
         run: allure generate --clean ./out/allure-results --output ./out/allure-report
 
-      - name: 'Archive Allure report'
+      - name: 'Archive reports'
         uses: actions/upload-artifact@v4
         with:
           name: e2e-test-report
           path: ./out
           if-no-files-found: ignore
           retention-days: 5
+          
+      - name: 'Publish reports'
+        env: 
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+        run: |
+          if [ "$GITHUB_EVENT_NAME" == pull_request ]; then
+            WORKFLOW_NAME=publish-test-reports-pr.yml
+          else
+            WORKFLOW_NAME=publish-test-reports-trunk-merge.yml
+          fi
+          
+          gh workflow run "$WORKFLOW_NAME" \
+            -f run_id=$RUN_ID \
+            -f e2e_artifact=e2e-test-report \
+            -f pr_number=$PR_NUMBER \
+            -f commit_sha=$COMMIT_SHA \
+            -f s3_root=public \
+            --repo woocommerce/woocommerce-test-reports
