--- a/.github/workflows/blocks-playwright.yml
+++ b/.github/workflows/blocks-playwright.yml
@@ -26,11 +26,15 @@ jobs:
                     - name: Normal
                       file: playwright.config.ts
                       resultPath: test-results
-                      shard: 1/2
+                      shard: 1/3
                     - name: Normal
                       file: playwright.config.ts
                       resultPath: test-results
-                      shard: 2/2
+                      shard: 2/3
+                    - name: Normal
+                      file: playwright.config.ts
+                      resultPath: test-results
+                      shard: 3/3
                     - name: Classic
                       file: playwright.classic-theme.config.ts
                       resultPath: test-results-classic-theme
@@ -38,11 +42,15 @@ jobs:
                     - name: SideEffects
                       file: playwright.side-effects.config.ts
                       resultPath: test-results-side-effects
-                      shard: 1/2
+                      shard: 1/3
                     - name: SideEffects
                       file: playwright.side-effects.config.ts
                       resultPath: test-results-side-effects
-                      shard: 2/2
+                      shard: 2/3
+                    - name: SideEffects
+                      file: playwright.side-effects.config.ts
+                      resultPath: test-results-side-effects
+                      shard: 3/3
                     - name: BlockThemeWithTemplates
                       file: playwright.block-theme-with-templates.config.ts
                       resultPath: test-results-block-theme-with-templates
