--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -213,14 +213,19 @@ jobs:
         run: |
           if [ "$GITHUB_EVENT_NAME" == pull_request ]; then
             WORKFLOW_NAME=publish-test-reports-pr.yml
+            gh workflow run publish-test-reports-pr.yml \
+              -f run_id=$RUN_ID \
+              -f e2e_artifact=e2e-test-report \
+              -f api_artifact='' \
+              -f pr_number=$PR_NUMBER \
+              -f commit_sha=$COMMIT_SHA \
+              -f s3_root=public \
+              --repo woocommerce/woocommerce-test-reports
           else
-            WORKFLOW_NAME=publish-test-reports-trunk-merge.yml
+            gh workflow run publish-test-reports-trunk-merge.yml \
+              -f run_id=$RUN_ID \
+              -f artifact=e2e-test-report \
+              -f pr_number='' \
+              -f test_type="e2e" \
+              --repo woocommerce/woocommerce-test-reports
           fi
-          
-          gh workflow run "$WORKFLOW_NAME" \
-            -f run_id=$RUN_ID \
-            -f e2e_artifact=e2e-test-report \
-            -f pr_number=$PR_NUMBER \
-            -f commit_sha=$COMMIT_SHA \
-            -f s3_root=public \
-            --repo woocommerce/woocommerce-test-reports
