--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -169,7 +169,7 @@ jobs:
   publish-e2e-test-reports:
     name: 'Publish e2e test reports'
     needs: [ project-e2e-test-jobs ]
-    if: ${{ always() && fromJSON(needs.project-e2e-test-jobs.result) != 'cancelled' && fromJSON(needs.project-e2e-test-jobs.result) != 'skipped' }}
+    if: ${{ always() && (contains( needs.*.result, 'success' ) || contains( needs.*.result, 'failure' ))
     runs-on: ubuntu-latest
 
     steps:
