--- a/plugins/woocommerce/package.json
+++ b/plugins/woocommerce/package.json
@@ -30,6 +30,8 @@
 		"env:stop": "pnpm wp-env stop",
 		"env:test": "WP_ENV_LIFECYCLE_SCRIPT_AFTER_START='./tests/e2e-pw/bin/test-env-setup.sh' && pnpm env:dev && pnpm playwright install chromium",
 		"env:test:cot": "WP_ENV_LIFECYCLE_SCRIPT_AFTER_START='ENABLE_HPOS=1 ./tests/e2e-pw/bin/test-env-setup.sh' && ENABLE_HPOS=1 pnpm env:dev",
+		"env:perf:install-k6": "curl https://github.com/grafana/k6/releases/download/v0.33.0/k6-v0.33.0-linux-amd64.tar.gz -L | tar xvz --strip-components 1",
+		"env:perf": "pnpm env:dev && pnpm env:performance-init && pnpm env:perf:install-k6",
 		"preinstall": "npx only-allow pnpm",
 		"postinstall": "composer install",
 		"lint": "pnpm --if-present '/^lint:lang:.*$/'",
@@ -49,6 +51,7 @@
 		"test:api-pw": "USE_WP_ENV=1 pnpm playwright test --config=tests/api-core-tests/playwright.config.js",
 		"test:e2e-pw": "USE_WP_ENV=1 pnpm playwright test --config=tests/e2e-pw/playwright.config.js",
 		"test:e2e-sample": "pnpm test:e2e-pw ./tests/e2e-pw/tests/merchant/product-edit.spec.js ./tests/e2e-pw/tests/merchant/product-delete.spec.js",
+		"test:perf": "./k6 run plugins/woocommerce/tests/performance/tests/gh-action-pr-requests.js",
 		"test:env:start": "pnpm env:test",
 		"test:php": "./vendor/bin/phpunit -c ./phpunit.xml",
 		"test:php:watch": "./vendor/bin/phpunit-watcher watch",
@@ -181,6 +184,16 @@
 					"changes": [],
 					"testEnv": {
 						"start": "env:test"
+					}
+				},
+				{
+					"name": "Core Performance tests (K6)",
+					"testType": "performance",
+					"command": "test:perf",
+					"shards": 0,
+					"changes": [],
+					"testEnv": {
+						"start": "env:perf"
 					}
 				}
 			]
