--- a/.github/workflows/smoke-test-pr-merge.yml
+++ b/.github/workflows/smoke-test-pr-merge.yml
@@ -1,8 +1,8 @@
 name: Run tests against trunk after PR merge
 on:
-    pull_request:
-        types:
-            - closed
+    #pull_request:
+        #types:
+            #- closed
 concurrency:
     group: ${{ github.workflow }}-${{ github.event.pull_request.number }}
     cancel-in-progress: true
